--- a/src/View/Home.fxml
+++ b/src/View/Home.fxml
@@ -27,6 +27,11 @@
                   <Insets bottom="15.0" top="15.0" />
                </padding>
             </JFXButton>
+            <JFXButton fx:id="clientsButton" onAction="#handleClients" prefHeight="25.0" prefWidth="393.0" text="Clients" textFill="WHITE">
+               <padding>
+                  <Insets bottom="15.0" top="15.0" />
+               </padding>
+            </JFXButton>
             <JFXButton fx:id="employeesButton" onAction="#handleEmployees" prefHeight="25.0" prefWidth="413.0" text="Employés" textFill="WHITE">
                <VBox.margin>
                   <Insets bottom="5.0" top="5.0" />
