--- a/src/View/FeaturesInterfaces/Rooms.fxml
+++ b/src/View/FeaturesInterfaces/Rooms.fxml
@@ -21,7 +21,7 @@
       <JFXTextField fx:id="minPriceTextField" layoutX="385.0" layoutY="108.0" prefHeight="31.0" prefWidth="125.0" promptText="Prix min" />
       <JFXTextField fx:id="maxPriceTextField" layoutX="385.0" layoutY="157.0" prefHeight="31.0" prefWidth="125.0" promptText="Prix max" />
       <JFXTextField fx:id="minNbGuestsTextField" layoutX="546.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Nombre de personnes min" />
-      <JFXButton layoutX="399.0" layoutY="227.0" mnemonicParsing="false" onAction="#handleFilterButtonAction" style="-fx-background-color: #30415D;" text="Filtrer" textFill="WHITE">
+      <JFXButton layoutX="447.0" layoutY="227.0" mnemonicParsing="false" onAction="#handleFilterButtonAction" style="-fx-background-color: #30415D;" text="Filtrer" textFill="WHITE" translateX="30.0">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding></JFXButton>
@@ -32,6 +32,11 @@
          </padding>
       </JFXButton>
       <JFXButton fx:id="modifyRoomButton" disable="true" layoutX="267.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleModifyRoomButtonAction" style="-fx-background-color: #30415D;" text="Modifier" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
+      <JFXButton layoutX="310.0" layoutY="227.0" mnemonicParsing="false" onAction="#handleReinitializeButtonAction" style="-fx-background-color: #30415D;" text="Reinitialiser" textFill="WHITE" translateX="-30.0">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding>
