--- a/src/View/FeaturesInterfaces/Reservation.fxml
+++ b/src/View/FeaturesInterfaces/Reservation.fxml
@@ -13,9 +13,9 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Menu.ReservationsController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="269.0" layoutX="53.0" layoutY="22.0" stroke="WHITE" strokeType="INSIDE" width="812.0" />
-      <JFXDatePicker fx:id="reservationDatePicker" layoutX="343.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de réservation" />
-      <JFXDatePicker fx:id="startDatePicker" layoutX="85.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de début" />
-      <JFXDatePicker fx:id="endDatePicker" layoutX="85.0" layoutY="157.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de fin" />
+      <JFXDatePicker fx:id="reservationDatePicker" defaultColor="#30415d" layoutX="343.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de réservation" />
+      <JFXDatePicker fx:id="startDatePicker" defaultColor="#30415d" layoutX="85.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de début" />
+      <JFXDatePicker fx:id="endDatePicker" defaultColor="#30415d" layoutX="85.0" layoutY="157.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de fin" />
       <Label layoutX="591.0" layoutY="113.0" text="Employé" />
       <JFXComboBox fx:id="employeeComboBox" layoutX="688.0" layoutY="108.0" prefWidth="150.0" />
       <JFXComboBox fx:id="clientComboBox" layoutX="688.0" layoutY="157.0" prefWidth="150.0" />
@@ -24,7 +24,7 @@
             <Font size="21.0" />
          </font>
       </Label>
-      <JFXButton layoutX="410.0" layoutY="206.0" mnemonicParsing="false" onAction="#handleFilterButtonAction" style="-fx-background-color: #30415D;" text="Filtrer" textFill="WHITE">
+      <JFXButton layoutX="459.0" layoutY="206.0" mnemonicParsing="false" onAction="#handleFilterButtonAction" style="-fx-background-color: #30415D;" text="Filtrer" textFill="WHITE" translateX="30.0">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding></JFXButton>
@@ -40,5 +40,10 @@
          </padding>
       </JFXButton>
       <Label layoutX="601.0" layoutY="162.0" text="Client" />
+      <JFXButton layoutX="324.0" layoutY="206.0" mnemonicParsing="false" onAction="#handleReinitializeButtonAction" style="-fx-background-color: #30415D;" text="Reinitialiser" textFill="WHITE" translateX="-30.0">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
    </children>
 </AnchorPane>
