--- a/src/View/FeaturesInterfaces/Reservation.fxml
+++ b/src/View/FeaturesInterfaces/Reservation.fxml
@@ -34,7 +34,7 @@
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding>
       </JFXButton>
-      <JFXButton fx:id="modifyReservationButton" disable="true" layoutX="267.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleModifyReservationButtonAction" style="-fx-background-color: #30415D;" text="Modifier" textFill="WHITE">
+      <JFXButton fx:id="deleteReservationButton" disable="true" layoutX="267.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleDeleteReservationButtonAction" style="-fx-background-color: #30415D;" text="Supprimer" textFill="WHITE">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding>
